Fix: Replace yarn.lock symlink with real lockfile (final fix)
- Removed .yarnrc.yml that was causing yarn to create symlinks
- Generated proper yarn.lock file for Vercel deployment
- Added .yarnrc.yml and .yarn/ to .gitignore
- This should resolve the ENOENT yarn.lock error on Vercel

--- a/nextjs_space/.gitignore
+++ b/nextjs_space/.gitignore
@@ -23,6 +23,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Yarn config (environment-specific)
+.yarnrc.yml
+.yarn/
+
 # Local env files
 .env
 .env.local
