--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "cd nextjs_space && yarn install && yarn build",
-  "devCommand": "cd nextjs_space && yarn dev",
-  "installCommand": "echo 'Skipping root install'",
-  "framework": null,
-  "outputDirectory": "nextjs_space/.next"
+  "buildCommand": "yarn build",
+  "devCommand": "yarn dev",
+  "installCommand": "yarn install",
+  "framework": "nextjs",
+  "rootDirectory": "nextjs_space"
 }
