--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "yarn build",
-  "devCommand": "yarn dev",
-  "installCommand": "yarn install",
+  "buildCommand": "cd nextjs_space && yarn install && yarn build",
+  "devCommand": "cd nextjs_space && yarn dev",
+  "installCommand": "echo 'Skipping root install'",
   "framework": "nextjs",
-  "rootDirectory": "nextjs_space"
+  "outputDirectory": "nextjs_space/.next"
 }
