Fix Vercel Next.js detection: Add framework to vercel.json and document root directory setup

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
   "buildCommand": "cd nextjs_space && yarn install && yarn build",
-  "outputDirectory": "nextjs_space/.next"
+  "outputDirectory": "nextjs_space/.next",
+  "installCommand": "cd nextjs_space && yarn install",
+  "framework": "nextjs"
 }
